# kis-sdk

./: Cargo.toml  README.md
.github/workflows/: publish-crates.yml
contracts/: kis_official_endpoint_inventory.compact.json
docs/: contract-quality-report.md  usage-ko.md  usage.md
docs/adr/: 0001-kis-sdk-runtime-architecture.md
docs/mock-server/: README.md
docs/release/: crates-publish.md
scripts/: verify-crates-publishable.py
src/: apis.rs  client.rs  config.rs  contract.rs  credentials.rs  endpoint.rs  error.rs  fallback.rs  lib.rs  mock.rs  retry.rs
src/apis/: bond.rs  domestic_futures_options.rs  domestic_stock.rs  domestic_stock_realtime.rs  overseas_futures_options.rs  overseas_stock.rs
tests/: mock_server_contract.rs  sdk_core.rs
