[package]
name = "kis-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK core and mock contract harness for Korea Investment & Securities Open API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bogyie/kis-sdk"
readme = "README.md"
keywords = ["kis", "korea-investment", "sdk", "openapi"]

[lib]
name = "kis_sdk"
path = "src/lib.rs"

[[bin]]
name = "kis-mock-server"
path = "src/bin/kis-mock-server.rs"

[dependencies]
axum = "0.7"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }

[dev-dependencies]
